Piano page updates

--- a/p/media.html
+++ b/p/media.html
@@ -1,111 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="Joonwon Choi as an Amateur Pianist">
-        <meta name="author" content="Joonwon Choi">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Joonwon Choi as an Amateur Pianist">
+    <meta name="author" content="Joonwon Choi">
 
-        <title>Joonwon Choi as an Amateur Pianist</title>
+    <title>Joonwon Choi as an Amateur Pianist</title>
 
-        <!-- Bootstrap core CSS -->
-        <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
 
-        <!-- Custom styles for this template -->
-        <link href="../cover.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
-    </head>
+    <!-- Custom styles for this template -->
+    <link href="../cover.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
+  </head>
 
-    <body>
-        <div class="site-wrapper">
-            <div class="site-wrapper-inner">
-                <div class="cover-container">
-                    <div class="masthead clearfix">
-                        <div class="inner">
-                            <nav>
-                                <ul class="nav masthead-nav">
-                                    <li><a href="./index.html">Home</a></li>
-                                    <li><a href="./repertoire.html">Repertoire</a></li>
-                                    <li class="active"><a href="./media.html">Media</a></li>
-                                    <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-	                  <div class="inner cover">
-	                      <br/>
-	                      <br/>
-	                      <br/>
-	                  </div>
-
-                    <div class="inner cover">
-                        <p class="p-heading">Media.</p>
-
-	                      <p>You can watch (listen) more on following links:
-	                          <ul>
-		                            <li><a href="https://www.youtube.com/user/TheOpus37" target="_blank">Youtube</a></li>
-		                            <li><a href="https://soundcloud.com/joonwon-choi-1" target="_blank">SoundCloud</a></li>
-	                          </ul>
-	                      </p>
-
-	                      <h2><a id="2016_0"></a>2016</h2>
-	                      <ul>
-	                          <li>
-		                            <p>05/08/2016</p>
-		                            <ul>
-		                                <li>MIT Emerson Scholar Recital</li>
-		                                <li>Beethoven: Piano Sonata No. 30 in E major, op. 109
-		                                    <ul>
-		                                        <li>I. Vivace ma non troppo - Adagio espressivo</li>
-		                                        <li>II. Prestissimo</li>
-		                                    </ul>
-		                                </li>
-		                                <li>Instructor: Marilyn Roth</li>
-		                            </ul>
-		                            <p>
-		                                <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/228821775&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		                            </p>
-	                          </li>
-	                          <li>
-		                            <p>05/08/2016</p>
-		                            <ul>
-		                                <li>MIT Concert of Music for Two Pianos</li>
-		                                <li>Dave Brubeck: Points on Jazz (for two pianos)
-		                                    <ul>
-		                                        <li>1- Prelude</li>
-		                                        <li>2- Scherzo</li>
-		                                        <li>3- Blues</li>
-		                                        <li>4- Fugue</li>
-		                                        <li>5- Rag</li>
-		                                        <li>6- Chorale</li>
-		                                        <li>7- Walts</li>
-		                                        <li>8- A La Turk</li>
-		                                    </ul>
-		                                </li>
-		                                <li>Pf1. Hane Lee, Pf2. Joonwon Choi</li>
-		                                <li>Coach: David Deveau</li>
-		                            </ul>
-		                            <p>
-		                                <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/228824716&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-		                            </p>
-	                          </li>
-	                      </ul>
-
-	                      <!-- End of the markdown document -->
-
-                    </div>
-
-                </div>
-
+  <body>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li><a href="./index.html">Home</a></li>
+                  <li><a href="./repertoire.html">Repertoire</a></li>
+                  <li class="active"><a href="./media.html">Media</a></li>
+                  <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
+                </ul>
+              </nav>
             </div>
+          </div>
+          <div class="inner cover">
+            <br/>
+            <br/>
+            <br/>
+          </div>
 
+          <div class="inner cover">
+            <p class="p-heading">Media.</p>
+
+            <p>You can watch (listen) more on following links:
+              <ul>
+                <li><a href="https://www.youtube.com/user/TheOpus37" target="_blank">Youtube</a></li>
+                <li><a href="https://soundcloud.com/joonwon-choi-1" target="_blank">SoundCloud</a></li>
+              </ul>
+            </p>
+
+            <ul>
+              <li>
+                <p>12/11/2016</p>
+                <ul>
+                  <li>MIT Emerson Scholar Recital</li>
+                  <li>Johannes Brahms: Piano Concerto No. 1 in D minor, op. 15
+                    <ul>
+                      <li>III. Rondo: Allegro non troppo</li>
+                    </ul>
+                  </li>
+                  <li>Instructor: Marilyn Roth</li>
+                </ul>
+                <p>
+		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/312635688&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true">
+		  </iframe>
+                </p>
+              </li>
+              <li>
+                <p>05/14/2017</p>
+                <ul>
+                  <li>MIT Chamber Music Society Concert</li>
+		  <ul>
+		    <li>Dmitri Shostakovich: Concertino for Two Pianos, op. 94</li>
+		    <li>Witold Lutoslawski: Variations on a Theme of Paganini</li>
+		  </ul>
+                  <li>Pf1. Hane Lee, Pf2. Joonwon Choi</li>
+                  <li>Coach: David Deveau</li>
+                </ul>
+                <p>
+		  <iframe width="60%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/338817169&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true">
+		  </iframe>
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+    </div>
 
-        <!-- Bootstrap core JavaScript
-	           ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    </body>
+    <!-- Bootstrap core JavaScript
+         ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  </body>
 </html>
