Piano page updates

--- a/p/repertoire.html
+++ b/p/repertoire.html
@@ -49,6 +49,32 @@
             <h2><a id="2017_0"></a>2017</h2>
             <ul>
               <li>
+                <p>12/11/2017</p>
+                <ul>
+                  <li>MIT Emerson Scholar Recital</li>
+                  <li>Joseph Haydn: Variations in F minor, Hob.XVII:6</li>
+		  <li>Alexander Scriabin: 24 Preludes, op. 11
+                    <ul>
+                      <li>No. 1 in C major - Vivace</li>
+                      <li>No. 14 in E-flat minor - Presto</li>
+                    </ul>
+                  </li>
+                  <li>Instructor: Marilyn Roth</li>
+                </ul>
+              </li>
+              <li>
+                <p>12/02/2017</p>
+                <ul>
+                  <li>MIT Emerson Scholar Recital</li>
+                  <li>Edward Elgar: Cello Concerto in E minor, op. 85
+                    <ul>
+                      <li>IV. Allegro - Moderato - Allegro, ma non troppo - Poco piu lento - Adagio</li>
+                    </ul>
+                  </li>
+                  <li>Vc. Hoon Cho, Pf. Joonwon Choi (acc.)</li>
+                </ul>
+              </li>
+              <li>
                 <p>05/14/2017</p>
                 <ul>
                   <li>MIT Chamber Music Society Concert</li>
