--- a/c/index.html
+++ b/c/index.html
@@ -115,7 +115,7 @@
               <ul>
                 <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
                     Specification and its Modular Verification.</span>
-                    [<a href="./docs/icfp17.pdf">pdf</a>]<br />
+                  [<a href="./docs/icfp17.pdf">pdf</a>]<br />
                   <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
                   Sherman, Adam Chlipala, and Arvind.<br />
                   <span class="conference">Proceedings of the 22nd ACM SIGPLAN International
@@ -124,9 +124,21 @@
               </ul>
               <ul>
                 <li><span class="paper">An Inlining Approach to Formal Hardware Semantics.</span>
-                    [<a href="./docs/msthesis.pdf">pdf</a>]<br />
+                  [<a href="./docs/msthesis.pdf">pdf</a>]<br />
                   <span class="conference">M.S. Thesis in Electrical Engineering and Computer
                     Science, Massachusetts Institute of Technology.</span><br />
+                </li>
+              </ul>
+              <ul>
+                <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
+                  [<a href="http://sf.snu.ac.kr/gil.hur/publications/crellvm.pdf">draft
+                  pdf</a>]<br />
+                  Jeehoon Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark
+                  Dongyeon Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon
+                  Choi</span>, Chung-Kil Hur, and Kwangkeun Yi.<br />
+                  <span class="conference">To appear in Proceedings of the ACM SIGPLAN 2018
+                  Conference on Programming Language Design and Implementation (PLDI'18). June
+                  2018.</span>
                 </li>
               </ul>
             </div>
