--- a/p/recital.html
+++ b/p/recital.html
@@ -26,8 +26,8 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="./index.html">Home</a></li>
-                  <li><a href="./recital.html">Recital</a></li>
+                  <li><a href="./index.html">Home</a></li>
+                  <li class="active"><a href="./recital.html">Recital</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
@@ -37,44 +37,30 @@
           </div>
 
           <div class="inner cover">
-            <div class="col-xs-12 col-sm-12 col-md-12">
-              <p class="p-heading">Joonwon Choi as an Amateur Pianist.</p>
-              <br />
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-12">
-              <img src="../images/profilep.jpg" width="80%" />
-              <br />
-              <br />
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-12">
-              <p>Besides academic careers, Joonwon also pursues his musical careers as an amateur
-                pianist. He has studied piano performance for three and a half years as
-                an <a href="http://mta.mit.edu/music/performance/emerson-program"
-                      target="_blank">MIT Emerson scholar</a>, with the
-                instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
-                              target="_blank">Marilyn Roth</a> in New England Conservatory.</p>
-            </div>
+            <br/>
+            <br/>
+            <br/>
           </div>
 
           <div class="inner cover">
-            <script type="text/javascript">
-              var sc_project="11069616"; 
-              var sc_invisible="0"; 
-              var sc_security="6af2b505"; 
-              var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
-              document.write("<sc"+"ript type='text/javascript' src='" + scJsHost + "statcounter.com/counter/counter.js'></sc"+"ript>");
-            </script>
-            <noscript>
-              <div class="statcounter">
-                <a title="shopify traffic stats"
-                   href="http://statcounter.com/shopify/"
-                   target="_blank">
-                  <img class="statcounter"
-                       src="//c.statcounter.com/11069616/0/6af2b505/0/"
-                       alt="shopify traffic stats">
-                </a>
-              </div>
-            </noscript>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+              <p class="p-heading">Recital.</p>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+              <p>I'm giving my first-and-last solo piano recital at MIT as part of Emerson Student
+		Recital series!
+	      </p>
+	      <p>The recital is free and open to the public; no reservations are required.
+	      </p>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+              <h3>- Poster</h3>
+              <img src="../images/recital-poster.jpeg" width="90%" />
+              <h3>- Program</h3>
+              <img src="../images/recital-program-white.jpeg" width="90%" />
+              <br />
+              <br />
+            </div>
           </div>
         </div>
       </div>
