Piano page update

--- a/p/index.html
+++ b/p/index.html
@@ -27,7 +27,6 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="./index.html">Home</a></li>
-                  <li><a href="./recital.html">Recital</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
@@ -48,7 +47,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
               <p>Besides academic careers, Joonwon also pursues his musical careers as an amateur
-                pianist. He has studied piano performance for three and a half years as
+                pianist. He has studied piano performance for four years as
                 an <a href="http://mta.mit.edu/music/performance/emerson-program"
                       target="_blank">MIT Emerson scholar</a>, with the
                 instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
