--- a/p/recital.html
+++ b/p/recital.html
@@ -28,9 +28,6 @@
                 <ul class="nav masthead-nav">
                   <li><a href="./index.html">Home</a></li>
                   <li class="active"><a href="./recital.html">Recital</a></li>
-                  <li><a href="./repertoire.html">Repertoire</a></li>
-                  <li><a href="./media.html">Media</a></li>
-                  <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -47,10 +44,7 @@
               <p class="p-heading">Recital.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
-              <p>I'm giving my first-and-last solo piano recital at MIT as part of Emerson Student
-		Recital series!
-	      </p>
-	      <p>The recital is free and open to the public; no reservations are required.
+              <p>I gave my solo piano recital at MIT as part of Emerson Student Recital series!
 	      </p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
