--- a/p/repertoire.html
+++ b/p/repertoire.html
@@ -27,7 +27,6 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="./index.html">Home</a></li>
-                  <li><a href="./recital.html">Recital</a></li>
                   <li class="active"><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
@@ -45,8 +44,55 @@
           <div class="inner cover">
             <p class="p-heading">Repertoire.</p>
 
-            <!-- Converted from the markdown document -->
-
+	    <h2><a id="2018_0"></a>2018</h2>
+	    <ul>
+	      <li>
+		<p>05/09/2018</p>
+		<ul>
+		  <li>Emerson Scholar Solo Recital</li>
+		  <li><a href="./recital.html">Recital page</a></li>
+		  <li>Joseph Haydn: Variations in F minor, Hob.XVII:6</li>
+		  <li>Alexander Scriabin: 24 Preludes, op. 11 (excerpts)
+                    <ul>
+                      <li>No. 1 in C major - Vivace</li>
+                      <li>No. 14 in E-flat minor - Presto</li>
+		      <li>No. 4 in E minor - Lento</li>
+		      <li>No. 6 in B minor - Allegro</li>
+		      <li>No. 8 in F-sharp minor - Allegro agitato</li>
+		      <li>No. 11 in B major - Allegro assai</li>
+		      <li>No. 14 in E-flat minor - Presto</li>
+		      <li>No. 17 in A-flat major - Allegretto</li>
+		      <li>No. 21 in B-flat major - Andante</li>
+                    </ul>
+                  </li>
+		  <li>Sergei Prokofiev: Piano Sonata No. 7 in B-flat major, op. 83
+		    <ul>
+		      <li>I. Allegro inquieto</li>
+		      <li>II. Andante caloroso</li>
+		      <li>III. Precipitato</li>
+		    </ul>
+		  </li>
+                  <li>Instructor: Marilyn Roth</li>
+		</ul>
+	      </li>
+	      <li>
+		<p>05/09/2018</p>
+                <ul>
+                  <li>MIT Chamber Music Society Concert</li>
+		  <li>Johannes Brahms: Piano Trio No. 1 in B major, op. 8 (1889 version)
+		    <ul>
+		      <li>I. Allegro con brio - Tranquillo - In tempo ma sempre sostenuto</li>
+		      <li>II. Scherzo: Allegro molto - Meno allegro - Tempo primo</li>
+		      <li>III. Adagio</li>
+		      <li>IV. Finale: Allegro</li>
+		    </ul>
+		  </li>
+                  <li>Pf. Joonwon Choi, Vn. Katherine Young, Vc. Hoon Cho</li>
+                  <li>Coach: Jean Rife</li>
+                </ul>
+	      </li>
+	    </ul>
+	      
             <h2><a id="2017_0"></a>2017</h2>
             <ul>
               <li>
@@ -424,7 +470,6 @@
               </li>
             </ul>
 
-            <!-- End of the markdown document -->
           </div>
         </div>
       </div>
