Academia page update

--- a/c/index.html
+++ b/c/index.html
@@ -166,6 +166,7 @@
             <div id="wexperience" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Work Experience</p>
               <ul>
+		<li>Jul 2018 - Sep 2018, Research Intern, Microsoft Research Cambridge</li>
                 <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry
                   Personnel)</li>
                 <li>Jan 2009 - Apr 2009, Software Engineering Intern(SWE), Google Korea</li>
