Updated the homepage

--- a/c/index.html
+++ b/c/index.html
@@ -15,7 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400|Open+Sans:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet">
     <style type="text/css">
       .author
       { text-decoration:underline; }
@@ -56,7 +56,7 @@
 
           <div class="inner cover">
             <div id="home">
-              <p class="p-heading">Joonwon Choi.</p>
+              <p class="p-heading">Joonwon Choi</p>
               <div class="col-xs-12 col-sm-4 col-md-4">
                 <img src="../images/profilec.jpg" width="200" alt="Profile"/>
               </div>
@@ -70,13 +70,13 @@
                   believe things not proven.
                 </p>
                 <hr />
-                <p><span class="emph">CV</span>: [<a href="./docs/cv.pdf">pdf</a>]
+                <p><span class="emph">CV</span> : [<a href="./docs/cv.pdf">pdf</a>]
                 </p>
-                <p><span class="emph">Office</span>: <a href="http://www.csail.mit.edu/sites/default/files/resources/maps/8G/G804.gif"
-                  target="_blank">32-G804</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139
+                <p><span class="emph">Office</span> : <a href="http://www.csail.mit.edu/sites/default/files/resources/maps/8G/G888.gif"
+                  target="_blank">32-G888</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139
                 </p>
-                <p><span class="emph">Email</span>: <a href="mailto:joonwonc@mit.edu">joonwonc@mit.edu</a>
-                  | <span class="emph">Phone</span>: +1-339-225-5940
+                <p><span class="emph">Email</span> : <a href="mailto:joonwonc@mit.edu">joonwonc@mit.edu</a>
+                  | <span class="emph">Phone</span> : +1-339-225-5940
                 </p>
                 <br />
                 <br />
@@ -87,11 +87,12 @@
               <p class="p-subheading">Research Interests</p>
               <p>My current research interests are as follows:</p>
               <ul>
-                <li>Formal synthesis of protocols in message-passing systems.</li>
-                <li>Formal verification for correct hardware design and synthesis, based on modular
-                  proof. Take a look at the <a href="http://plv.csail.mit.edu/kami"
-                  target="_blank">Kami</a> project page for details</li>
-                <li>Formal verification of realistic processors.</li>
+                <li><a href="http://plv.csail.mit.edu/kami" target="_blank">Kami</a>: formal
+                  verification for correct hardware design and synthesis, based on modular
+                  proof.</li>
+                <li>Hemiola: structural design and proof of hierarchical cache-coherence protocols,
+                  based on serializability guarantee in message-passing systems.</li>
+                <li>The end-to-end proof between hardware and software.</li>
               </ul>
             </div>
 
@@ -112,9 +113,22 @@
             <div id="publication" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Publication</p>
               <ul>
+                <li><span class="paper">EverCrypt: A Fast, Verified, Cross-Platform Cryptographic
+                    Provider.</span>
+                    [<a href="https://www.microsoft.com/en-us/research/publication/evercrypt-a-fast-veri%EF%AC%81ed-cross-platform-cryptographic-provider/">draft</a>]<br />
+                    Jonathan Protzenko, Bryan Parno, Aymeric Fromherz, Chris Hawblitzel, Marina
+                    Polubelova, Karthikeyan Bhargavan, Benjamin
+                    Beurdouche, <span class="author">Joonwon Choi</span>, Antoine Delignat-Lavaud,
+                    Cédric Fournet, Natalia Kulatova, Tahina Ramananandro, Aseem Rastogi, Nikhil
+                    Swamy, Christoph M. Wintersteiger, Santiago Zanella-Beguelin.<br />
+                  <span class="conference">To appear in IEEE Symposium on Security and Privacy
+                    (Oakland), May 2020.</span>
+                </li>
+              </ul>
+              <ul>
                 <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
                     Specification and its Modular Verification.</span>
-                  [<a href="./docs/icfp17.pdf">pdf</a>]<br />
+                  [<a href="https://dl.acm.org/citation.cfm?id=3110268">pdf</a>]<br />
                   <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
                   Sherman, Adam Chlipala, and Arvind.<br />
                   <span class="conference">Proceedings of the 22nd ACM SIGPLAN International
@@ -130,12 +144,11 @@
               </ul>
               <ul>
                 <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
-                  [<a href="http://sf.snu.ac.kr/gil.hur/publications/crellvm.pdf">draft
-                  pdf</a>]<br />
+                  [<a href="https://dl.acm.org/citation.cfm?id=3192377">pdf</a>]<br />
                   Jeehoon Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark
                   Dongyeon Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon
                   Choi</span>, Chung-Kil Hur, and Kwangkeun Yi.<br />
-                  <span class="conference">To appear in Proceedings of the ACM SIGPLAN 2018
+                  <span class="conference">Proceedings of the ACM SIGPLAN 2018
                   Conference on Programming Language Design and Implementation (PLDI'18). June
                   2018.</span>
                 </li>
