--- a/c/index.html
+++ b/c/index.html
@@ -57,27 +57,27 @@
           <div class="inner cover">
             <div id="home">
               <p class="p-heading">Joonwon Choi</p>
-              <div class="col-xs-12 col-sm-4 col-md-4">
+              <div class="col-xs-12 col-sm-3 col-md-3">
                 <img src="../images/profilec.jpg" width="200" alt="Profile"/>
+                <br />
+                <br />
               </div>
-              <div class="col-xs-12 col-sm-8 col-md-8">
+              <div class="col-xs-12 col-sm-9 col-md-9">
                 <p>I'm a graduate student at MIT CSAIL, currently co-advised
                   by <a href="http://adam.chlipala.net" target="_blank">Adam Chlipala</a>
                   and <a href="http://csg.csail.mit.edu/Users/arvind" target="_blank">Arvind</a>.
-                  I'm interested in formal verification for any computer systems that are hard to
-                  believe to be correct. I'm an advocate of mechanized proofs, I like to prove
-                  something with <a href="http://coq.inria.fr" target="_blank">Coq</a>. I don't
-                  believe things not proven.
+                  My research interests include formal verification for any computer systems that
+                  are hard to believe to be correct. I'm an advocate of mechanized proofs; I like to
+                  prove something with <a href="http://coq.inria.fr" target="_blank">Coq</a>. I
+                  don't believe things not proven.
                 </p>
-                <hr />
                 <p><span class="emph">Office</span> : <a href="http://www.csail.mit.edu/sites/default/files/resources/maps/8G/G888.gif"
                   target="_blank">32-G888</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139
                 </p>
-                <p><span class="emph">Email</span> : <a href="mailto:joonwonc@mit.edu">joonwonc@mit.edu</a>
-                  | <span class="emph">Phone</span> : +1-339-225-5940
+                <p><span class="emph">Email</span> : joonwonc <span class="emph">at</span>
+                  mit <span class="emph">dot</span> edu | <span class="emph">Phone</span> :
+                  +1-339-225-5940
                 </p>
-                <br />
-                <br />
               </div>
             </div>
 
@@ -85,12 +85,14 @@
               <p class="p-subheading">Research Interests</p>
               <p>My current research interests are as follows:</p>
               <ul>
-                <li><a href="http://plv.csail.mit.edu/kami" target="_blank">Kami</a>: formal
-                  verification for correct hardware design and synthesis, based on modular
-                  proof.</li>
-                <li>Hemiola: structural design and proof of hierarchical cache-coherence protocols,
-                  based on serializability guarantee in message-passing systems.</li>
-                <li>The end-to-end proof between hardware and software.</li>
+                <li><span class="emph">Hemiola</span>: structural design and proof of hierarchical
+                  cache-coherence protocols, based on serializability guarantee in message-passing
+                  systems.</li>
+                <li><span class="emph"><a href="http://plv.csail.mit.edu/kami"
+                  target="_blank">Kami</a></span>: a Coq framework to prove hardware components
+                  based on modularity.</li>
+                <li><span class="emph">Lightbulb</span>: an end-to-end proof between hardware and
+                  software.</li>
               </ul>
             </div>
 
@@ -112,8 +114,9 @@
               <p class="p-subheading">Publication</p>
               <ul>
                 <li><span class="paper">Kami: A Platform for High-Level Parametric Hardware
-                    Specification and its Modular Verification.</span>
-                  [<a href="https://dl.acm.org/citation.cfm?id=3110268">pdf</a>]<br />
+                    Specification and its Modular Verification</span>
+                  [<a href="https://dl.acm.org/citation.cfm?id=3110268">paper</a>]
+                  [<a href="https://github.com/mit-plv/kami">github</a>]<br />
                   <span class="author">Joonwon Choi</span>, Muralidaran Vijayaraghavan, Benjamin
                   Sherman, Adam Chlipala, and Arvind.<br />
                   <span class="conference">Proceedings of the 22nd ACM SIGPLAN International
@@ -121,18 +124,19 @@
                 </li>
               </ul>
               <ul>
-                <li><span class="paper">An Inlining Approach to Formal Hardware Semantics.</span>
-                  [<a href="./docs/msthesis.pdf">pdf</a>]<br />
+                <li><span class="paper">An Inlining Approach to Formal Hardware Semantics</span>
+                  [<a href="https://dspace.mit.edu/handle/1721.1/105576">paper</a>]<br />
+                  <span class="author">Joonwon Choi</span><br />
                   <span class="conference">M.S. Thesis in Electrical Engineering and Computer
                     Science, Massachusetts Institute of Technology.</span><br />
                 </li>
               </ul>
               <ul>
                 <li><span class="paper">Crellvm: Verified Credible Compilation for LLVM</span>
-                  [<a href="https://dl.acm.org/citation.cfm?id=3192377">pdf</a>]<br />
-                  Jeehoon Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark
-                  Dongyeon Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon
-                  Choi</span>, Chung-Kil Hur, and Kwangkeun Yi.<br />
+                  [<a href="https://dl.acm.org/citation.cfm?id=3192377">paper</a>]<br /> Jeehoon
+                  Kang, Yoonseung Kim, Youngju Song, Juneyoung Lee, Sanghoon Park, Mark Dongyeon
+                  Shin, Yonghyun Kim, Sungkeun Cho, <span class="author">Joonwon Choi</span>,
+                  Chung-Kil Hur, and Kwangkeun Yi.<br />
                   <span class="conference">Proceedings of the ACM SIGPLAN 2018
                   Conference on Programming Language Design and Implementation (PLDI'18). June
                   2018.</span>
@@ -140,8 +144,8 @@
               </ul>
               <ul>
                 <li><span class="paper">EverCrypt: A Fast, Verified, Cross-Platform Cryptographic
-                    Provider.</span>
-                    [<a href="https://www.microsoft.com/en-us/research/publication/evercrypt-a-fast-veri%EF%AC%81ed-cross-platform-cryptographic-provider/">draft</a>]<br />
+                    Provider</span>
+                    [<a href="https://eprint.iacr.org/2019/757">paper</a>]<br />
                     Jonathan Protzenko, Bryan Parno, Aymeric Fromherz, Chris Hawblitzel, Marina
                     Polubelova, Karthikeyan Bhargavan, Benjamin
                     Beurdouche, <span class="author">Joonwon Choi</span>, Antoine Delignat-Lavaud,
@@ -156,8 +160,8 @@
             <div id="awards" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Awards and Honors</p>
               <ul>
-                <li>Sep 2014 - Current, Kwanjeong Educational Fellowship</li>
-                <li>Sep 2014 - Current, MIT Emerson Scholarship for Private Music Study</li>
+                <li>Sep 2014 - May 2019, Kwanjeong Educational Fellowship</li>
+                <li>Sep 2014 - May 2018, MIT Emerson Scholarship for Private Music Study</li>
                 <li>Feb 2013, Top Honor (summa cum laude) Certification</li>
                 <li>Mar 2006 - Feb 2013, Presidential Science Scholarship</li>
               </ul>
@@ -177,7 +181,7 @@
             <div id="wexperience" class="col-xs-12 col-sm-12 col-md-12">
               <p class="p-subheading">Work Experience</p>
               <ul>
-		<li>Jul 2018 - Sep 2018, Research Intern, Microsoft Research Cambridge</li>
+                <li>Jul 2018 - Sep 2018, Research Intern, Microsoft Research Cambridge</li>
                 <li>Apr 2009 - Oct 2011, Software Engineer, allm Games (Skilled Industry
                   Personnel)</li>
                 <li>Jan 2009 - Apr 2009, Software Engineering Intern(SWE), Google Korea</li>
@@ -189,9 +193,9 @@
 
           <div class="inner cover">
             <script type="text/javascript">
-              var sc_project="11069616"; 
-              var sc_invisible="0"; 
-              var sc_security="6af2b505"; 
+              var sc_project="11069616";
+              var sc_invisible="0";
+              var sc_security="6af2b505";
               var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
               document.write("<sc"+"ript type='text/javascript' src='" + scJsHost + "statcounter.com/counter/counter.js'></sc"+"ript>");
             </script>
@@ -210,11 +214,8 @@
         </div>
       </div>
     </div>
-    
-    <!-- Bootstrap core JavaScript
-         ================================================== -->
-    <!-- Placed at the end of the document so the pages load
-         faster -->
+
+    <!-- Bootstrap core JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
 </html>
