--- a/c/index.html
+++ b/c/index.html
@@ -38,7 +38,7 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li><a href="./index.html">Home</a></li>
                   <li><a href="./index.html#interests">Interests</a></li>
                   <li><a href="./index.html#education">Education</a></li>
                   <li><a href="./index.html#awards">Awards</a></li>
