Change the profile picture

--- a/c/index.html
+++ b/c/index.html
@@ -16,6 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="../cover.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style type="text/css">
       .author
       { text-decoration:underline; }
@@ -58,9 +59,9 @@
             <div id="home">
               <p class="p-heading">Joonwon Choi</p>
               <div class="col-xs-12 col-sm-3 col-md-3">
-                <img src="../images/profilec.jpg" width="200" alt="Profile"/>
-                <br />
-                <br />
+                <p align="center">
+                  <img src="../images/profilec_2.jpg" width="200" alt="Profile"/>
+                </p>
               </div>
               <div class="col-xs-12 col-sm-9 col-md-9">
                 <p>I'm a graduate student at MIT CSAIL, currently co-advised
@@ -71,12 +72,13 @@
                   prove something with <a href="http://coq.inria.fr" target="_blank">Coq</a>. I
                   don't believe things not proven.
                 </p>
-                <p><span class="emph">Office</span> : <a href="http://www.csail.mit.edu/sites/default/files/resources/maps/8G/G888.gif"
-                  target="_blank">32-G888</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139
+                <p><span class="material-icons md-16">business</span>
+                  <a href="http://www.csail.mit.edu/sites/default/files/resources/maps/8G/G888.gif"
+                     target="_blank">32-G888</a>, Stata Center, 32 Vassar St, Cambridge, MA 02139
                 </p>
-                <p><span class="emph">Email</span> : joonwonc <span class="emph">at</span>
-                  mit <span class="emph">dot</span> edu | <span class="emph">Phone</span> :
-                  +1-339-225-5940
+                <p><span class="material-icons md-16">email</span>
+                  joonwonc <span class="emph">at</span> mit <span class="emph">dot</span> edu
+                  || <span class="material-icons md-16">phone</span> +1-339-225-5940
                 </p>
               </div>
             </div>
