Update the piano homepage

--- a/p/index.html
+++ b/p/index.html
@@ -26,7 +26,7 @@
             <div class="inner">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li><a href="./index.html">Home</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
@@ -46,20 +46,19 @@
               <br />
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
-              <p>Besides academic careers, Joonwon also pursues his musical careers as an amateur
-                pianist. He has studied piano performance for four years as
-                an <a href="http://mta.mit.edu/music/performance/emerson-program"
-                      target="_blank">MIT Emerson scholar</a>, with the
-                instructor <a href="http://necmusic.edu/faculty/marilyn-roth"
-                              target="_blank">Marilyn Roth</a> in New England Conservatory.</p>
+              <p>Besides academic careers, Joonwon also pursues his musical careers as an amateur pianist.</p>
+              <p>He has studied piano performance for four years as an
+                <a href="http://mta.mit.edu/music/performance/emerson-program" target="_blank">MIT Emerson scholar</a>,
+                with the instructor <a href="http://necmusic.edu/faculty/marilyn-roth" target="_blank">Marilyn Roth</a>
+                in New England Conservatory.</p>
             </div>
           </div>
 
           <div class="inner cover">
             <script type="text/javascript">
-              var sc_project="11069616"; 
-              var sc_invisible="0"; 
-              var sc_security="6af2b505"; 
+              var sc_project="11069616";
+              var sc_invisible="0";
+              var sc_security="6af2b505";
               var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
               document.write("<sc"+"ript type='text/javascript' src='" + scJsHost + "statcounter.com/counter/counter.js'></sc"+"ript>");
             </script>
