--- a/p/recital.html
+++ b/p/recital.html
@@ -27,7 +27,6 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="./index.html">Home</a></li>
-                  <li class="active"><a href="./recital.html">Recital</a></li>
                 </ul>
               </nav>
             </div>
@@ -44,13 +43,12 @@
               <p class="p-heading">Recital.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
-              <p>I gave my solo piano recital at MIT as part of Emerson Student Recital series!
-	      </p>
+              <p>I gave my solo piano recital at MIT as part of Emerson Student Recital series.</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12">
-              <h3>- Poster</h3>
+              <h3>Poster</h3>
               <img src="../images/recital-poster.jpeg" width="90%" />
-              <h3>- Program</h3>
+              <h3>Program</h3>
               <img src="../images/recital-program-white.jpeg" width="90%" />
               <br />
               <br />
