--- a/p/media.html
+++ b/p/media.html
@@ -28,7 +28,7 @@
                 <ul class="nav masthead-nav">
                   <li><a href="./index.html">Home</a></li>
                   <li><a href="./repertoire.html">Repertoire</a></li>
-                  <li class="active"><a href="./media.html">Media</a></li>
+                  <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
                 </ul>
               </nav>
