--- a/p/repertoire.html
+++ b/p/repertoire.html
@@ -27,7 +27,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="./index.html">Home</a></li>
-                  <li class="active"><a href="./repertoire.html">Repertoire</a></li>
+                  <li><a href="./repertoire.html">Repertoire</a></li>
                   <li><a href="./media.html">Media</a></li>
                   <li><a href="mailto:im.joonwon.choi@gmail.com">Contact</a></li>
                 </ul>
