Update the EverCrypt paper link

--- a/c/index.html
+++ b/c/index.html
@@ -147,14 +147,14 @@
               <ul>
                 <li><span class="paper">EverCrypt: A Fast, Verified, Cross-Platform Cryptographic
                     Provider</span>
-                    [<a href="https://eprint.iacr.org/2019/757">paper</a>]<br />
-                    Jonathan Protzenko, Bryan Parno, Aymeric Fromherz, Chris Hawblitzel, Marina
-                    Polubelova, Karthikeyan Bhargavan, Benjamin
-                    Beurdouche, <span class="author">Joonwon Choi</span>, Antoine Delignat-Lavaud,
-                    Cédric Fournet, Natalia Kulatova, Tahina Ramananandro, Aseem Rastogi, Nikhil
-                    Swamy, Christoph M. Wintersteiger, Santiago Zanella-Beguelin.<br />
-                  <span class="conference">To appear in IEEE Symposium on Security and Privacy
-                    (Oakland), May 2020.</span>
+                  [<a href="https://ieeexplore.ieee.org/document/9152808">paper</a>]<br />
+                  Jonathan Protzenko, Bryan Parno, Aymeric Fromherz, Chris Hawblitzel, Marina
+                  Polubelova, Karthikeyan Bhargavan, Benjamin Beurdouche,
+                  <span class="author">Joonwon Choi</span>, Antoine Delignat-Lavaud, Cédric Fournet,
+                  Natalia Kulatova, Tahina Ramananandro, Aseem Rastogi, Nikhil Swamy, Christoph
+                  M. Wintersteiger, Santiago Zanella-Beguelin.<br />
+                  <span class="conference">IEEE Symposium on Security and Privacy (Oakland), May
+                    2020.</span>
                 </li>
               </ul>
             </div>
